syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "observer/observer.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

message EventBallotCreated {
  string msg_type_url = 1;
  string ballot_identifier = 3;
  string observation_hash = 4;
  string observation_chain = 5;
  string ballot_type = 6;
}

message EventKeygenBlockUpdated {
  string msg_type_url = 1;
  string keygen_block = 2;
  string keygen_pubkeys = 3;
}
